Fri Jul 30 17:29:18 2004  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* NEWS:  Added CIAO 0.4.2 noteworthy items.

Thu Jul 29 16:54:01 2004  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* DAnCE/ciao/Servant_Impl_T.cpp (get_all_facets):
	  (get_all_consumers):

	  Fixed incorrect emulated exception parameter.  The method
	  definition incorrectly used a default parameter.

	  Fixed unused parameter warning.

Thu Jul 29 16:47:56 2004  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* DAnCE/NodeApplicationManager/NodeApplicationManager_Impl.inl
	  (get_nodeapp_manager):

	  Removed emulated exception parameter.  The corresponding method
	  declaration in the header doesn't have such a parameter.  Fixes
	  a compile-time problem.

Thu Jul 29 14:28:55 2004  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* DAnCE/RepositoryManager/RepositoryManager_Impl.cpp
	  (createPackage, deletePackage, findPackageByName):

	  Fixed emulated exception macro usage.  Addresses compile-time
	  problems in MSVC++ 6 builds.

Tue Jul 27 14:48:10 2004  Tao Lu  <lu@dre.vanderbilt.edu>

	* DAnCE/NodeApplicationManager/NodeApplicationManager_Impl.h:
	  Removed the emulated exception parameter from the destructor
	  so the file will be compiled when the exception is turned off.

Tue Jul 27 09:58:58 2004  Arvind S. Krishna  <arvindk@dre.vanderbilt.edu>

        * DAnCE/NodeApplication/NodeApplication.mpc:
          Rearranged the order of libraries to fix link errors in static
          configurations.

Mon Jul 26 11:08:14 2004  Arvind S. Krishna  <arvindk@dre.vanderbilt.edu>

        * DAnCE/tests/Config_Handlers/handler_test.mpb:
          Added CIAO_DnC_Client to resolve link errors

Mon Jul 26 11:06:38 2004  Arvind S. Krishna  <arvindk@dre.vanderbilt.edu>

        * DAnCE/NodeApplicationManager/NodeApplicationManager_Impl.inl:
          Added ACE_INLINE for the get_nodeapp_ref method to resolve
          linking errors in the builds with static configurations
